--- a/Favascript Form.html
+++ b/Favascript Form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.css">
-    <title>JUICE WORLD</title>
+    <title>GREENER WORLD</title>
 </head>
 <body class="bg-success text-white justify-content-between">
     <div class="container-fluid">
